--- a/tax_music/css/style.css
+++ b/tax_music/css/style.css
@@ -23,9 +23,14 @@
     stroke-width: 0.25px;
     opacity: 0.50;
 }
-.flagpole{
+.stem{
     stroke: #000;
     stroke-width: 0.50px;
     opacity:0.5
-
+}
+.voronoi{
+  fill: none;
+  pointer-events: all;
+  stroke: none;
+  stroke-width:0.25px;
 }
