--- a/tax_music/css/style.css
+++ b/tax_music/css/style.css
@@ -15,22 +15,37 @@
 
 .stave{
     stroke: #000;
-    stroke-width: 1px;
+    stroke-width: 0.50px;
     opacity:0.5
+    stroke-linecap: round;
 }
 .note{
     stroke: #000;
     stroke-width: 0.25px;
-    opacity: 0.50;
+    opacity: 1;
 }
 .stem{
     stroke: #000;
     stroke-width: 0.50px;
-    opacity:0.5
+    opacity:0.5;
+    stroke-linecap: round;
 }
 .voronoi{
   fill: none;
   pointer-events: all;
-  stroke: none;
+  stroke: red;
+  stroke-opacity:0.10;
   stroke-width:0.25px;
+}
+.flag{
+    stroke: #000;
+    stroke-width: 2px;
+    opacity:0.5;
+    stroke-linecap: round;
+}
+.arc{
+    stroke: #000;
+    stroke-width: 2px;
+    opacity:0.5;
+    stroke-linecap: round;
 }
