--- a/tax_music/css/style.css
+++ b/tax_music/css/style.css
@@ -39,13 +39,14 @@
 }
 .flag{
     stroke: #000;
-    stroke-width: 2px;
+    stroke-width: 0.5px;
     opacity:0.5;
     stroke-linecap: round;
 }
 .arc{
     stroke: #000;
-    stroke-width: 2px;
+    fill:none;
+    stroke-width: 0.50px;
     opacity:0.5;
     stroke-linecap: round;
 }
