--- a/tax_music/css/style.css
+++ b/tax_music/css/style.css
@@ -37,10 +37,12 @@
   stroke-opacity:0.00;
   stroke-width:0.25px;
 }
-.flag{
+
+.flags{
     stroke: #000;
-    stroke-width: 0.5px;
-    opacity:0.5;
+    fill: none;
+    stroke-width: 0.50px;
+    opacity:0.0;
     stroke-linecap: round;
 }
 .arc{
