added text to mouseover

--- a/tax_music/css/style.css
+++ b/tax_music/css/style.css
@@ -52,3 +52,9 @@
     opacity:0.5;
     stroke-linecap: round;
 }
+.state-text{
+  font-size:12px;
+  opacity: 0;
+  stroke: black;
+  text-anchor: middle;
+}
