--- a/tax_sounds/css/style.css
+++ b/tax_sounds/css/style.css
@@ -18,7 +18,7 @@
 .staves{
     stroke: #000;
     stroke-width: 0.50px;
-    stroke-opacity:0.10
+    opacity:0.10
     stroke-linecap: round;
 }
 .stem{
@@ -26,6 +26,22 @@
     stroke-width: 0.50px;
     opacity:0.5;
     stroke-linecap: round;
+}
+.state{
+    stroke: #fff;
+    stroke-width:0.25;
+    opacity: 0.80;
+}
+.state-hover{
+    stroke: #444;
+    stroke-width:1px;
+    opacity:1;
+}
+.stars{
+    opacity:0.0;
+}
+.stars-background{
+    opacity:0.0;
 }
 /*
 .note{
